[package]
name = "solidity-dispatcher-miner"
version = "0.1.0"
authors = ["Anton Bukov <k06aaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
structopt = "0.3.26"
hex = "0.4.3"
